Implement installation prompt for PWA and adjust button positioning in standalone mode

--- a/src/app/list/list.component.scss
+++ b/src/app/list/list.component.scss
@@ -13,3 +13,9 @@ mat-card {
   bottom: 20px;
   right: 20px;
 }
+
+@media (display-mode: standalone) {
+  #buttonCreate {
+    bottom: 50px;
+  }
+}
