Add push notification registration button and functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <mat-toolbar color="primary">
   <h1>CoffeeLog</h1>
+  <div style="flex: 1 1 auto"></div>
+  <button mat-button (click)="registerForPush()"><mat-icon>notifications</mat-icon></button>
 </mat-toolbar>
 
 <router-outlet />
